infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  labels:
    app: expiration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          imagePullPolicy: Never
          image: zaidshaikh2811/expiration:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-srv
spec:
  selector:
    app: expiration
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
      name: http
